fix(Tree & TreeSelect): Switcher loading icon should be vertical align, close #15955

--- a/components/tree-select/style/index.less
+++ b/components/tree-select/style/index.less
@@ -107,7 +107,7 @@
             left: 0;
             display: inline-block;
             width: 24px;
-            height: 24px;
+            height: @tree-title-height;
             color: @primary-color;
             font-size: 14px;
             transform: none;
